--- a/network-documentation/secret/tutorials/5.-writing-and-deploying-your-first-secret-contract.md
+++ b/network-documentation/secret/tutorials/5.-writing-and-deploying-your-first-secret-contract.md
@@ -282,8 +282,8 @@ Querying contract for updated count
 New Count=102
 ```
 ----------------------------------------------------------------
-Copy `transactionHash` from the output of either the contract upload transaction, or the contract execution to update the counter, and replace `<TRANSACTION HASH>` in the link below to see the transaction in Secret Explorer!
-`https://explorer.secrettestnet.io/transactions/<TRANSACTION HASH>`
+Copy `transactionHash` from the output of either the contract upload transaction, or the contract execution to update the counter, and replace `TRANSACTION_HASH` in the link below to see the transaction in Secret Explorer!
+https://explorer.secrettestnet.io/transactions/TRANSACTION_HASH
 
 
 ## Conclusion
